syntax = "proto3";
message CelebsProto {
  repeated CelebProto celebs = 1;
}

message CelebProto{
  string avatar = 1;
  string name = 2;
  string nameId = 3;
  string summary = 4;
  string topTitleRole = 5;
  string topTitleId = 6;
  string topTitleName = 7;
}