syntax = "proto3";
message GenresProto {
  repeated string genres = 1;
}