syntax = "proto3";

message HomeProto {
  BoxOfficeProto boxOffice = 1;
  repeated MediaProto editorPicks = 2;
  repeated MediaProto featuredToday = 3;
  repeated MediaProto imdbOriginals = 4;
  repeated NewsProto news = 5;
  repeated HomeTrailerProto trailers = 6;
}

message BoxOfficeProto {
  string weekendStartDate = 1;
  string weekendEndDate = 2;
  repeated BoxOfficeItemProto items = 3;
}

message BoxOfficeItemProto {
  int32 weekendGross = 1;
  string title = 2;
  string titleID = 3;
}

message MediaProto {
  string caption = 1;
  string cover = 2;
  string id = 3;
  bool image = 4;
  bool video = 5;
  string rmId = 6;
  string title = 7;
}

message NewsProto {
  string id = 1;
  string date = 2;
  string image = 3;
  string source = 4;
  string title = 5;
}

message HomeTrailerProto {
  string title = 1;
  string subtitle = 2;
  string cover = 3;
  string titleId = 4;
  string videoId = 5;
  string preview = 6;
  string duration = 7;
}

