syntax = "proto3";
message KeywordsProto {
  repeated string keywords = 1;
}